[package]
name = "authorization_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
axum-server = "0.6.0"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-postgres = { version = "0.7.10", features = ["with-uuid-1"] }
uuid = "1.8.0"
